# src/api/model/index.ts
@@ -21,6 +21,10 @@ export * from './blockCreate';
 export * from './blockResponse';
 export * from './blockState';
 export * from './blockUpdate';
+export * from './childCredentialsSet';
+export * from './childLoginRequest';
+export * from './childSettingsResponse';
+export * from './childSettingsUpdate';
 export * from './coachingRequest';
 export * from './coachingResponse';
 export * from './completionFactor';
@@ -125,6 +129,7 @@ export * from './patchPreferencesApiV1PreferencesPatchParams';
 export * from './patchPreferencesForUserApiV1PreferencesUserIdPatchParams';
 export * from './patternsApiV1AiPatternsGetParams';
 export * from './patternsResponse';
+export * from './pinChangeRequest';
 export * from './policyResponse';
 export * from './policyResponseConstraints';
 export * from './policyUpdate';
